# EAP

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
contracts/examples/: auditor-extraction-skill.yaml  auditor-report-agent.yaml  auditor-report-analysis-skill.yaml  bindings.dev.yaml  document-intelligence-capability.yaml  rating-note-workflow.yaml  ratings-knowledge.yaml
contracts/model_profiles/: reasoning-fallback.yaml  reasoning-standard.yaml
contracts/output_schemas/: auditor-report.yaml
contracts/policies/: auditor-guardrails.yaml
deploy/argocd/: eap-dev.application.yaml  eap-prod.application.yaml  project.yaml
deploy/kubernetes/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  networkpolicy.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/overlays/dev/: config-patch.yaml  kustomization.yaml
deploy/kubernetes/overlays/prod/: kustomization.yaml  resources-patch.yaml
docs/: README.md
docs/_meta/: documentation-foundation.md  implementation-map-auditor-slice.md
docs/adr/: 0001-modular-monolith.md  0002-resolved-definition-boundary.md  0003-agent-framework-adapter.md  0004-adapters-over-rebuild.md  README.md
docs/api/: reference.md
docs/appendices/: examples.md  glossary.md  key-interfaces.md
docs/architecture/: component-lld.md  conformance-matrix.md  deployment.md  designed-vs-implemented.md  known-gaps.md  overview.md  repository.md  sequence-diagrams.md
docs/capabilities/: mcp.md  overview.md
docs/deployment/: overview.md
docs/developer-guide/: authoring.md  local-development.md  testing.md
docs/integrations/: docling.md  model-provider.md
docs/knowledge/: overview.md
docs/operations/: configuration.md  end-to-end-auditor.md  evaluation.md  observability.md  persistence.md  reliability.md  security.md
docs/runtime/: agents.md  maf-boundary.md  overview.md  skills.md  workflows.md
docs/specifications/: contracts.md  lifecycle.md  resolved-definition.md
scripts/: generate_schemas.py
src/eap/: __init__.py
src/eap/adapters/: __init__.py  base.py  database.py  docling.py  enterprise_api.py  llm_gateway.py  milvus.py  storage.py
src/eap/api_gateway/: __init__.py  app.py  assembly.py  cli.py
src/eap/capabilities/: __init__.py  base.py
src/eap/capabilities/api/: __init__.py
src/eap/capabilities/manager/: __init__.py
src/eap/capabilities/mcp/: __init__.py
src/eap/capabilities/native/: __init__.py
src/eap/common/: __init__.py  config.py  errors.py  events.py  ids.py  reliability.py
src/eap/control_plane/: __init__.py
src/eap/control_plane/catalog/: __init__.py
src/eap/documents/: __init__.py
src/eap/evaluation/: __init__.py
src/eap/knowledge/: __init__.py
src/eap/observability/: __init__.py
src/eap/persistence/: __init__.py  base.py  memory.py  models.py  postgres.py  s3.py
src/eap/providers/: __init__.py
src/eap/providers/llm/: __init__.py
src/eap/runtime/: __init__.py  agent_runner.py  deps.py  framework.py  models.py  skill_context.py
src/eap/security/: __init__.py
src/eap/specifications/: __init__.py  agent.py  binding.py  capability.py  envelope.py  knowledge.py  loader.py  model_profile.py  output_schema.py  policy.py  prompt.py  references.py  resolved_definition.py  skill.py  versioning.py  workflow.py
tests/: conftest.py  test_api.py  test_auditor_golden_path.py  test_control_plane.py  test_evaluation.py  test_resolved_definition.py  test_runtime.py  test_specifications.py  test_workflow.py
(+19 files in other folders)
